2007-04-17  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb.c:
	* src/hildon-bread-crumb.h:

	Make the get_natural_size function a vfunc.

2007-04-16  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb.c:
	* src/hildon-bread-crumb-trail.c:

	Some cleanups.

2007-04-16  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	[1.0.1 release]

	* AUTHORS:
	* NEWS:
	* configure.ac:
	* debian/changelog: Updating for release.

2007-04-16  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb.c (hildon_bread_crumb_get_natural_size):
	don't leak the pango layout.

2007-04-16  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon.h:
	* examples/hildon-bread-crumb-trail-example.c:

	Fix example.

2007-04-16  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* debian/changelog: Removing the bug-fixed entries that were actually
	resolved as WONTFIX.

	* src/hildon-date-editor.c: Removing a redundant check. Fixes
	NB#54182.

2007-04-13  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb-trail.c:
	* src/hildon-bread-crumb-trail.h:
	* src/hildon-bread-crumb.c:
	* src/hildon-bread-crumb.h:

	Untabify.
	
2007-04-13  Xan Lopez  <xan.lopez@nokia.com>

	* src/hildon-bread-crumb-trail.c: don't use the priv data of bct
	until it's passed the type check.

2007-04-12  Xan Lopez  <xan.lopez@nokia.com>

	* examples/hildon-bread-crumb-trail-example.c

	Add license.
	
2007-04-12  Xan Lopez  <xan.lopez@nokia.com>

	* examples/Makefile.am
	* examples/hildon-bread-crumb-trail-example.c
	* src/Makefile.am
	* src/hildon-bread-crumb-trail.c
	* src/hildon-bread-crumb-trail.h
	* src/hildon-bread-crumb.c
	* src/hildon-bread-crumb.h

	New HildonBreadCrumbTrail widget.

2007-04-02  Lucas Rocha	 <lucas.rocha@nokia.com>

	* src/hildon-range-editor.c (hildon_range_editor_init),
	src/hildon-seekbar.c (hildon_seekbar_get_fraction,
	hildon_seekbar_set_fraction, hildon_seekbar_set_position),
	src/hildon-time-editor.c (hildon_time_editor_tap_and_hold_setup,